--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,14 @@
   }
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
+  box-sizing: border-box;
 }
 
 #root {
